self_hosting_machinery/webgui/static/style.css
/* ... */
.add-model-modal-dialog {
   max-width: 800px;
}

.upload-tab-table-files tbody td,
.upload-tab-table-files thead th,
.upload-tab-table-files tbody td,
.upload-tab-table-files thead th {
    text-align: center;
}
.upload-tab-table-files thead th:first-child {
    min-width: 300px;
    overflow: hidden;
    white-space: nowrap;
    text-align: left;
}
.upload-tab-table-files tbody td:first-child {
    min-width: 300px;
    overflow: hidden;
    white-space: nowrap;
    text-align: left;
}
.upload-tab-table-types thead th:first-child {
    min-width: 100px;
    overflow: hidden;
    white-space: nowrap;
    text-align: left;
}
.upload-tab-table-types tbody td:first-child {
    min-width: 100px;
    overflow: hidden;
    white-space: nowrap;
    text-align: left;
}
.store-input {
    width: 70px;
    margin: 0 10px;
}
.store-block {
    display: flex;
    align-items: center;
}
.fine-gfx {
    width: 100% !important;
}
.run-table tr {
    cursor: pointer;
}
.table-types thead th {
    position: sticky;
    top: 0;
    background-color: #fff;
}
.run-table-wrapper {
    max-height: 500px;
    overflow: auto;
}
.uploaded-total {
    margin-top: 15px;
    font-size: 0.8rem;
    opacity: 0.4;
}
.uploaded-status {
    font-size: 0.8rem;
    opacity: 0.7;
    font-weight: bold;
    margin-bottom: 15px;
}
.finetune-spinner {
    margin-right: 5px;
    width: 10px;
    height: 10px;
}
.table-types tr td:first-of-type {
    width: 50%;
}
.upload-spinner {
    margin-right: 5px;
}
.table-models td:nth-child(2),
.table-models td:nth-child(3),
.table-models th:nth-child(2),
.table-models th:nth-child(3) {
    text-align: center;
}

.table-gpus td:nth-child(2),
.table-gpus td:nth-child(3),
.table-gpus th:nth-child(2),
.table-gpus th:nth-child(3) {
    text-align: center;
}
h3 {
    font-size: 1.3rem;
    font-weight: bold;
}
.file-status {
    font-weight: normal;
    width: 100px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    margin-right: 5px;
}
.upload-tab-table-files td:nth-child(2),
.upload-tab-table-files th:nth-child(2) {
    width: 100px;
}

.tooltip-inner {
    white-space:pre;
    max-width:none;
    text-align: left;
}
.gpus-pane {
    margin-bottom: 20px;
}
.gpus-list {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-gap: 10px;
}
@media (min-width: 576px) and (max-width: 767.98px) {
    .gpus-list  {
        grid-template-columns: 1fr 1fr;
    }
}
@media (min-width: 768px) and (max-width: 991.98px) {
    .gpus-list  {
        grid-template-columns: 1fr 1fr 1fr;
    }
}

@media (min-width: 992px) and (max-width: 1199.98px) {
    .gpus-list  {
        grid-template-columns: 1fr 1fr 1fr 1fr;
    }
}
.gpus-item {
    display: flex;
    justify-content: center;
    text-align: center;
    border: 1px solid rgba(0,0,0,0.15);
    border-radius: 8px;
    padding: 15px 10px;
    background-color: #fff;
    width: 100%;
    overflow: hidden;
    flex-direction: column;
}
.gpus-title {
    font-size: 0.8rem;
    text-align: left;
    margin-bottom: 10px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    padding-bottom: 5px;
}
.gpus-current-status {
    padding: 5px;
    background-color: #efefef;
    color: #000;
    display: flex;
    width: 100%;
    justify-content: flex-start;
    font-size: 10px;
    font-weight: bold;
    border-radius: 4px;
    margin-top: 10px;
}
.gpus-content {

}
.gpus-mem {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-size: 12px;
    margin-bottom: 5px;
    margin-top: 5px;
}
.gpus-mem b {
    margin-right: 5px;
    width: 60px;
    text-align: left;
    display: inline-flex;
    margin-top: 2px;
}
.gpus-mem-bar {
    height: 10px;
    width: 100px;
    background-color: #efefef;
    position: relative;
    display: inline-flex;
}
.gpus-mem-bar span {
    background-color: rosybrown;
    position: absolute;
    left: 0;
    top: 0;
    height: 10px;
}
.gpus-mem-wrap {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}
.gpus-command {
    text-align: left;
    font-size: 12px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.gpus-status {
    display: none;
    position: absolute;
    padding: 10px;
    border: 1px solid #efefef;
    background-color: #fff;
    box-shadow: 0 0 10px rgba(0,0,0,0.1);
    width: auto;
    white-space: wrap;
    margin-top: 10px;
    z-index: 999;
}
.gpus-status-visible {
    display: block;
}
.gpus-status-invisible {
    opacity: 0;
}
.gpus-command b {
    margin-right: 5px;
    width: 60px;
    text-align: left;
    display: inline-flex;
}
.gpus-temp {
    text-align: left;
    font-size: 12px;
    align-items: center;
    display: flex;
}
.gpus-temp b {
    margin-right: 5px;
    width: 60px;
    text-align: left;
    display: inline-flex;
}
/* ... */

